<resources>
    <string name="app_name">"Kroger Inventory"</string>
    <string name="title_activity_stock">StockActivity</string>
    <string name="price">Price: $%1$s </string>
    <string name="quantity">Quantity: %1$s</string>
    <string name="sold">Sold: %1$s</string>
    <string name="item_name">Name:</string>
    <string name="item_supplier">Supplier:</string>
    <string name="item_quantity">Quantity: </string>
    <string name="item_category">Category:</string>
    <string name="item_price">Price: </string>
    <string name="add">Add Item</string>
    <string name="update">Update Item</string>
    <string name="supplier_hint">Name of Supplier</string>
    <string name="name_hint">Name of Item</string>
    <string name="price_hint">Price of Item - e.g. 5 dollars</string>
    <string name="quantity_hint">Quantity of Item</string>
    <string name="empty_text">Press the button in the bottom right hand corner \nto add an string name to the inventory list.</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="contentDescription">Corresponding Category Picture</string>
    <string name="order_more">Order More</string>
    <string name="delete_item">Delete Item</string>
    <string name="sale">Sale</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    
    <string name="baby">Baby Items</string>
    <string name="baking">Baking</string>
    <string name="beverages">Beverages</string>
    <string name="bread">Bread/Bakery</string>
    <string name="canned">Canned Goods</string>
    <string name="cereal">Cereal</string>
    <string name="dairy">Dairy</string>
    <string name="deli">Deli</string>
    <string name="frozen">Frozen Foods</string>
    <string name="meats">Meats</string>
    <string name="misc">Miscellaneous</string>
</resources>
