<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_detail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.example.frederickodaso.krogerinventory.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="20sp"
            tools:text="Item Supplier"
            android:text="@string/item_supplier"
            android:id="@+id/detailSupplier_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"/>

        <EditText
            tools:text="Edit Item Supplier"
            android:hint="@string/supplier_hint"
            android:id="@+id/detailSupplier_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="20sp"
            tools:text="Item Name"
            android:text="@string/item_name"
            android:id="@+id/detailName_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"/>

        <EditText
            tools:text="Edit Item Name"
            android:hint="@string/name_hint"
            android:id="@+id/detailName_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="20sp"
            tools:text="Item Price"
            android:text="@string/item_price"
            android:id="@+id/detailPrice_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"/>

        <EditText
            tools:text="Edit Item Price"
            android:hint="@string/price_hint"
            android:id="@+id/detailPrice_editText"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="20sp"
            tools:text="Item Quantity"
            android:text="@string/item_quantity"
            android:id="@+id/detailQuantity_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:layout_gravity="center"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <Button
                android:id="@+id/decrease_Button"
                android:text="@string/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="decrement"/>

            <EditText
                tools:text="0"
                android:hint="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:inputType="number"
                android:id="@+id/detailQuantity_editText"
                android:gravity="center"/>

            <Button
                android:id="@+id/increase_Button"
                android:text="@string/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="increment"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textSize="20sp"
            tools:text="Item Category"
            android:text="@string/item_category"
            android:id="@+id/detailCategory_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:layout_gravity="center"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <ImageView
                tools:src="@drawable/images"
                android:id="@+id/category_imageView"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/contentDescription"
                android:scaleType="centerCrop"
                android:layout_marginTop="24dp"/>

            <Spinner
                android:id="@+id/spinner_item"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"
                android:layout_below="@id/category_imageView"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/orderMore_Button"
            android:text="@string/order_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="sendOrder"/>

        <Button
            android:id="@+id/deleteItem_Button"
            android:text="@string/delete_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

        <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/addItem_Button"/>

        <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/updateItem_Button"
            android:layout_above="@+id/orderMore_Button"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>


</LinearLayout>
