<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:padding="16dp"
              android:descendantFocusability="blocksDescendants"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name"
            tools:text="Item Name"
            android:text="@string/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/price"
            tools:text="Item Price"
            android:text="@string/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_below="@id/name"/>

        <TextView
            android:id="@+id/quantity"
            tools:text="Item Quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/sold"
            tools:text="Number of Items Sold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/quantity"/>

        <Button
            android:text="@string/sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sale"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</LinearLayout>